--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,44 @@ ion-icon {
   margin: 0 8px;
   cursor: pointer;
 }
+.skill {
+  /* margin-bottom: 24px; */
+  position: relative;
+}
+
+.skill > p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #1a1716;
+  margin: 4px 0;
+}
+
+.skill:before {
+  width: 100%;
+  height: 16px;
+  content: "";
+  display: block;
+  position: absolute;
+  background: #92b3b2;
+  bottom: 0;
+}
+.skill-bar {
+  width: 100%;
+  height: 16px;
+  background: #2e3057;
+  display: block;
+  position: relative;
+}
+
+.skill-bar span {
+  position: absolute;
+  top: 0;
+  left: 4px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.skill-count3 {
+  right: 0;
+}
